--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
+    <style>
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+    </style>
     <title>テーブル検索</title>
 </head>
 <body>
