--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         height: auto;
     }
     </style>
-    <title>テーブル検索</title>
+    <title>席次検索システム</title>
 </head>
 <body>
-    <h1>テーブル検索</h1>
+    <h1>席次検索システム</h1>
+    <span>お名前を「カタカナフルネーム/氏名の間にスペースなし」で入力ください</span>
+    <span>（例：ムカサケンタロウ）</span>
     <form id="search-form">
         <label for="name">お名前:</label>
         <input type="text" id="name" name="name" required>
