--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             if (guest) {
                 const tableNumber = guest[1];
                 const tableLocation = guest[2];
-                document.getElementById('result').innerHTML = `<p>あなたのテーブルナンバーは「${tableNumber}</p>」です<img src="${tableLocation}" alt="テーブル位置図">`;
+                document.getElementById('result').innerHTML = `<p>あなたのテーブルナンバーは「${tableNumber}」</p>です<img src="${tableLocation}" alt="テーブル位置図">`;
             } else {
                 document.getElementById('result').textContent = 'お名前が見つかりませんでした。もう一度お試しください。';
             }
