--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <h1>席次検索システム</h1>
-    <span>お名前を「カタカナフルネーム/氏名の間にスペースなし」で入力ください</span>
-    <span>（例：ムカサケンタロウ）</span>
+    <div>お名前を「カタカナフルネーム/氏名の間にスペースなし」で入力ください</div>
+    <div>（例：ムカサケンタロウ）</div>
     <form id="search-form">
         <label for="name">お名前:</label>
         <input type="text" id="name" name="name" required>
