--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>席次検索システム</h1>
     <div>お名前を「カタカナフルネーム/氏名の間にスペースなし」で入力ください</div>
-    <div>（例：ムカサケンタロウ）</div>
+    <div>（例：ムカサユウコ）</div>
     <form id="search-form">
         <label for="name">お名前:</label>
         <input type="text" id="name" name="name" required>
